# rust-plus-golang

./: .gitignore  LICENSE  Makefile  README.md  main.go  main_dynamic.go  main_shared.go  main_static.go
lib/: .gitignore  hello.h  hello.rs
lib/hello/: Cargo.toml
lib/hello/src/: lib.rs
